Adds user account endpoints
